Move JS to separate file.

--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!doctype html>
 <html lang="en" ng-app="Angello">
-<head>
-  <meta charset="utf-8">
-  <script src="angular.js"></script>
-  <title>AngularJS in Action - Angello</title>
-</head>
-<body>
-				<div ng-controller="MainCtrl"> 
-				  <div class="span4 sidebar-content">
-					  <h2>Stories</h2>
-						<div class="story" ng-repeat="story in stories">
-						  <h4>{{story.title}}</h4>
-							<p>{{story.description}}</p>
-						</div>
-					</div>
-				</div>
-	<script>
-		var myModule = angular.module('Angello', []);
-		myModule.controller('MainCtrl', function($scope) {
-		  $scope.stories = [
-			  {title:'Story 00', description:'Description pending.'},
-			  {title:'Story 01', description:'Description pending.'},
-			  {title:'Story 02', description:'Description pending.'},
-			  {title:'Story 03', description:'Description pending.'},
-			  {title:'Story 04', description:'Description pending.'},
-			  {title:'Story 05', description:'Description pending.'}
-			];
-		} );
-	</script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <script src="angular.js"></script>
+    <title>AngularJS in Action - Angello</title>
+  </head>
+  <body>
+    <div ng-controller="MainCtrl"> 
+      <div class="span4 sidebar-content">
+        <h2>Stories</h2>
+        <div class="story" ng-repeat="story in stories">
+          <h4>{{story.title}}</h4>
+          <p>{{story.description}}</p>
+        </div>
+      </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
